# recession-dashboard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main_nrr-app-etl.yml
src/: api.py  etl.py  kpi.py  main.py
src/etl/: api.py  kpi.py  nrr.py
src/nrr/: nrr.py
test/: test_api.py  test_kpi.py
