[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Recession Dashboard"
version = "0.0.0"
authors = [
  { name="Alejandro Sanchez", email="jandro.sangom@gmail.com" },
]
description = "A dashboard that collects real-time stock market and macroeconomic data in order to find the probability of a economic recession."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: Windows 11",
]
